# viewshed-library-pybind11

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  README.md  conda-environment.yml  prepare_stub_template.py  pyproject.toml  setup.cfg  setup.py
.github/workflows/: change_conda_version.yaml  conda_build.yaml  prepare_stubs.yaml  relase_docker.yaml  relase_ppa.yaml  test_package.yaml
cmake/: FindSimpleRasters.cmake  FindViewshed.cmake  Pybind11Stubgen.cmake  QueryPythonForPybind11.cmake
conda/: conda_build_config.yaml  meta.yaml
conda/variants/: windows.yaml
cpp_module/: python_module.cpp  python_objects_utils.h  visibility_algorithms.cpp  visibility_algorithms.h
debian/: changelog  control  python-viewshed.install  rules
docker/: Dockerfile
scripts/: install_and_test_locally.sh  merge_stub_fixes.py  release_to_ppa.sh
scripts/precommit/: build_stubs.sh  conda_version.sh  pre-commit  version_update.sh
src/: CMakeLists.txt  python_module.cpp  python_objects_utils.cpp  python_objects_utils.h  visibility_algorithms.cpp  visibility_algorithms.h
src/viewshed/: __init__.py  _viewshed.pyi
src_python/viewshed/: __init__.py  __init__.pyi  viewshed.pyi
tests/: conftest.py  test_basic.py  test_inverseviewshed.py  test_module_functions.py  test_point.py  test_rasters.py  test_viewshed.py
viewshed/: __init__.pyi  viewshed.pyi
