[build-system]
requires = [
    "setuptools",
    "wheel",
    "cmake>=3.18",
    "scikit-build-core",
    "pybind11",
    "pybind11-stubgen"
    ]
build-backend = "scikit_build_core.build"

# Exclude directories from the build
[tool.setuptools.packages.find]
where = ["src"]
include = ["viewshed"]

sdist.include = ["src/viewshed//*.pyi", "src/viewshed/py.typed"]

[project]
name = "viewshed"
readme = "README.md"
version = "0.7.6"
description = "Python package to make using viewshed library easier, directly from Python."
requires-python = ">=3.8"
license = { "file" = "LICENSE" }
authors = [{ "name" = "Jan Caha", "email" = "jan.caha@outlook.com" }]
keywords = ["addition", "subtraction", "pybind11"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
]
urls = { "Documentation" = "https://github.com/JanCaha/viewshed-library-pybind11" }
dependencies = []

[tool.isort]
profile = "black"

[tool.black]
line-length = 120

[tool.mypy]
files = "setup.py"
python_version = "3.9"
strict = true
show_error_codes = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
warn_unreachable = true

[[tool.mypy.overrides]]
module = ["ninja"]
ignore_missing_imports = true


[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
filterwarnings = ["error"]
testpaths = ["tests"]

[tool.cibuildwheel]
test-command = "pytest {project}/tests"
test-extras = ["test"]
test-skip = ["*universal2:arm64"]
# Setuptools bug causes collision between pypy and cpython artifacts
before-build = "rm -rf {project}/build"
