[metadata]
name = viewshed
version = 0.0.1
description = Python package to make using viewshed library easier, directly from Python.
url = https://github.com/JanCaha/viewshed-library-pybind11
project_urls =
    Documentation = https://github.com/JanCaha/viewshed-library-pybind11
author_email = jan.caha@outlook.com
platforms = any
license = MIT

[options]
zip_safe = False
python_requires = >=3.8


[options.extras_require]
test = 
    pytest>=6.0
