[metadata]
name = viewshed
version = 0.0.2
description = Python package to make using viewshed library easier, directly from Python.
url = https://github.com/JanCaha/viewshed-library-pybind11
project_urls =
    Documentation = https://github.com/JanCaha/viewshed-library-pybind11
author_email = jan.caha@outlook.com
platforms = any
license = MIT

[options]
zip_safe = False
include_package_data = true
python_requires = >=3.8
packages = viewshed

[options.package_data]
viewshed = *.pyi

[options.extras_require]
test = 
    pytest>=6.0
